PythonServer/server/parser/gramática_java.txt

------------------------- CLASES E INTERFAZ ------------------------------ LISTO

INICIO := 'public' SENTENCIA_CLASE LISTA_CLASES 'ultimo'
        | 'public' SENTENCIA_INTERFAZ LISTA_INTERFACES 'ultimo' 

SENTENCIA_CLASE :=  'class' id '{' LISTA_DECLARACION_METODOS_FUNCIONES '}'

LISTA_CLASES := SENTENCIA_CLASE LISTA_CLASES
              | EPSILON

SENTENCIA_INTERFAZ := 'interface' id '{' LISTA_DECLARACION_METODOS'}'  

LISTA_INTERFACES := SENTENCIA_INTERFAZ LISTA_INTERFACES
                  | EPSILON


------------------------- METODOS Y FUNCIONES ------------------------------ LISTO

LISTA_DECLARACION_METODOS_FUNCIONES := DECLARACION_METODOS_FUNCIONES LISTA_DECLARACION_METODOS_FUNCIONESP
                                     | EPSILON

LISTA_DECLARACION_METODOS_FUNCIONESP := DECLARACION_METODOS_FUNCIONES LISTA_DECLARACION_METODOS_FUNCIONESP                      
                                      | EPSILON


LISTA_DECLARACION_METODOS := DECLARACION_METODO LISTA_DECLARACION_METODOSP
                           | EPSILON

LISTA_DECLARACION_METODOSP := DECLARACION_METODO LISTA_DECLARACION_METODOSP
                            | EPSILON

DECLARACION_METODOS_FUNCIONES := 'public' 'void' id '(' DECLARACION_PARAMETROS 
                               | 'public' TIPO id '(' DECLARACION_PARAMETROS 

DECLARACION_METODO := 'public' 'void' id '(' DECLARACION_PARAMETROS
                     
DECLARACION_PARAMETROS := TIPO id LISTA_PARAMETROS ')' LISTAINSTR_LLAVES
                        | ')' LISTAINSTR_LLAVES
                                
LISTA_PARAMETROS =: ',' TIPO id LISTA_PARAMETROS
                  | EPSILON  


------------------------- TIPO ------------------------------ LISTO

TIPO := int 
      | double
      | char
      | String
      | boolean

-------------------------  INSTRUCCIONES ------------------------------ LISTO

INSTRUCCION  := DECLARACION_VARIABLE; *
                | SENTENCIA_WHILE *
                | SENTENCIA_IF_ELSE *
                | SENTENCIA_FOR *
                | SENTENCIA_DO_WHILE *
                | SENTENCIA_PRINT *
                | ASIGNACION_SIMPLE *
                | SENTENCIA_CONTINUE *
                | SENTENCIA_BREAK *
                | SENTENCIA_RETURN_FUNCIONES *
                | SENTENCIA_RETURN_METODOS *
                | LLAMADA_METODO *
                | SENTENCIA_MAIN *
                | EPSILON *


LISTA_INSTRUCCIONES := INSTRUCCION LISTA_INSTRUCCIONESP

LISTA_INSTRUCCIONESP := INSTRUCCION LISTA_INSTRUCCIONESP
                      | EPSILON

DECLARACION_VARIABLE := TIPO id DECLARACION_VARIABLEP

DECLARACION_VARIABLEP := LISTA_ID ASIGNACION ;

LISTA_ID := ',' id LISTA_ID
          | EPSILON

LISTAINSTR_LLAVES := '{' LISTA_INSTRUCCIONES '}'

-------------------------  LLAMADA METODO ------------------------------ LISTO

LLAMADA_METODO := id '(' LISTA_PARAMETROS ')' ';'

-------------------------  ASIGNACIÓN ------------------------------ LISTO

ASIGNACION := '=' E ';'
            | EPSILON

ASIGNACION_SIMPLE := id ASIGNACION_SIMPLEP

ASIGNACION_SIMPLEP := '=' E ';'

LLAMADA_METODO := 

------------------------- SENTENCIA MAIN ------------------------------ LISTO

SENTENCIA_MAIN := 'public' 'static' 'void' 'main' '(' 'String' '[' ']' 'args' ')' LISTAINSTR_LLAVES

------------------------- SENTENCIA RETURN ------------------------------  LISTO

SENTENCIA_RETURN_FUNCIONES := 'return' E ';'
                            
SENTENCIA_RETURN_METODOS := 'return' ';'


------------------------- SENTENCIA CONTINUE ------------------------------ LISTO

SENTENCIA_CONTINUE := 'continue' ';'

--------------------------- SENTENCIA BREAK ------------------------------- LISTO

SENTENCIA_BREAK := 'break' ';'

-------------------------- SENTENCIA WHILE -------------------------------  LISTO

SENTENCIA_WHILE := 'while' '(' EXPRESION ')' LISTAINSTR_LLAVES

-------------------------- SENTENCIA IF ------------------------------- LISTO

SENTENCIA_IF := 'if' '(' EXPRESION ')' LISTAINSTR_LLAVES OPCION_ELSE

OPCION_ELSE := 'else' LISTA_IF 
             | EPSILON 

LISTA_IF := LISTAINSTR_LLAVES 
          | SENTENCIA_IF

--------------------------- SENTENCIA FOR ------------------------------ LISTO

SENTENCIA_FOR := 'for' '(' DECLARACION_FOR ';' EXPRESION ';' id DECREMENT_INCREMENT ')' LISTAINSTR_LLAVES

DECREMENT_INCREMENT := '++'
                     | '--'

DECLARACION_FOR := TIPO id '=' E 
                 | id '=' E

--------------------------- SENTENCIA PRINT ------------------------------ LISTO

SENTENCIA_PRINT := 'System' '.' 'out' '.' 'println' '(' E ')' ';'

---------------------------- CONDICIÓN ----------------------------------- PENDIENTE

EXPRESION := OPERADOR_NOT E CONDICION CONDICION_LOGICA

OPERADOR_NOT := '!'
               | EPSILON

CONDICION_LOGICA := '&&' EXPRESION
                   | '||' EXPRESION
                   | '^' EXPRESION
                   | EPSILON


CONDICION := '<=' E
           | '>=' EP
           | '>' E 
           | '<' E
           | '!=' E 

------------------------- EXPRESIÓN ------------------------------ LISTO

E := T EP

EP := + T EP
    | - T EP
    | EPSILON

T := F TP

TP := * F TP
    | / F TP
    | EPSILON

F := numero
   | decimal
   | true
   | false
   | id
   | '(' E ')'
   | string
